Fixed x overflow bug

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -71,17 +71,18 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground !overflow-x-hidden;
   }
 }
 
 body {
   font-family: "Courier New", Courier, monospace;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 body main > * {
   padding: 5rem 1rem;
+  overflow-x: hidden !important;
 }
 
 @media screen and (min-width: 768px) {
